# classic-mceliece-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: build.yaml  kat_tests.yaml
benches/: kem_api.rs
data/: testdata.txt
examples/: basic.rs  client-server.rs  katkem.rs
examples/katkem/: main.rs  nist_aes_rng.rs
src/: api.rs  benes.rs  bm.rs  controlbits.rs  controlbits_arrays.rs  crypto_hash.rs  decrypt.rs  decrypt_array.rs  decrypt_arrays.rs  encrypt.rs  gf.rs  int32_sort.rs  kem_api.rs  lib.rs  main.rs  mceliece348864.rs  mceliece348864f.rs  mceliece460896.rs  mceliece460896f.rs  mceliece6688128.rs  mceliece6688128f.rs  mceliece6960119.rs  mceliece6960119f.rs  mceliece8192128.rs  mceliece8192128f.rs  nist_aes_rng.rs  operations.rs  operations_arrays.rs  params.rs  pk_gen.rs  randombytes.rs  root.rs  sk_gen.rs  synd.rs  test_gf.rs  test_katkem.rs  test_kem.rs  test_transpose.rs  test_utils.rs  transpose.rs  (+2 more)
src/common/: benes.rs  crypto_hash.rs  gf12.rs  gf13.rs  int32_sort.rs  mod.rs  transpose.rs  uint64_sort.rs
src/common/internals348864/: benes.rs  bm.rs  controlbits.rs  decrypt.rs  encrypt.rs  gf_mul.rs  params.rs  root.rs  sk_gen.rs  synd.rs
src/common/internals460896/: benes.rs  bm.rs  decrypt.rs  encrypt.rs  gf_mul.rs  params.rs  root.rs  sk_gen.rs  synd.rs
src/mceliece348864/: benes.rs  bm.rs  controlbits.rs  decrypt.rs  encrypt.rs  gf.rs  gf_mul.rs  pk_gen.rs  root.rs  sk_gen.rs  synd.rs  util.rs
src/mceliece348864f/: pk_gen.rs
tests/: alloc.rs  katkem.sh
